Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -19,18 +19,18 @@ h2{
     font-weight: 600;
 }
 
-button{
+a{
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.btn{
     background-color: var(--primary-color);
     width: 100%;
     padding-block: 15px;
     border-radius: 4px;
     font-weight: 600;
     letter-spacing: 2px;
-}
-
-a{
-    color: var(--primary-color);
-    text-decoration: none;
 }
 
 .align-flex{
@@ -109,9 +109,9 @@ a{
     scroll-behavior: smooth;
     scroll-snap-align: end;
 }
-.modal-carousel::-webkit-scrollbar{
+/* .modal-carousel::-webkit-scrollbar{
     scroll-snap-type: none;
-}
+} */
 
 .carousel-cards{
     width: 290px;
@@ -139,7 +139,7 @@ a{
     text-align: center;
     background-color: var(--bg-secondary);
 }
-.modal-footer div{
+.modal-footer-container{
     display: grid;
     row-gap: 12px;
 }
@@ -149,3 +149,38 @@ a{
     margin-inline: auto;
     height: 100%;
 }
+
+/* Scroll Bar */
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #e1e1e1;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: #000000;
+  }
+  ::-webkit-scrollbar-track {
+    background: #666666;
+    border: 0px none #ffffff;
+    border-radius: 0px;
+  }
+  ::-webkit-scrollbar-track:hover {
+    background: #666666;
+  }
+  ::-webkit-scrollbar-track:active {
+    background: #333333;
+  }
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
